--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>This is where you introduce yourself.</p>
+            <p>This is where you introduce yourself</p>
         </section>
         <section id="contact">
             <h2>Contact</h2>
