--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Welcome to My Website</h1>
         <nav>
             <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a href="/Carlos-D-G/contact.html">Contact</a>
         </nav>
     </header>
     <main>
