--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <p>Email: yourname@example.com</p>
         </section>
     </main>
+    <!-- the ' &copy; ' tag does <i don't know yet replace here> -->
     <footer>
         <p>&copy; 2025 Your Name</p>
     </footer>
