--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Websit</h1>
         <nav>
             <a href="#about">About</a>
             <a href="/Carlos-D-G/contact.html">Contact</a>
