--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+    <!-- main body tag: Contains the content of the page, can be applied styles   -->
 <body>
     <header>
         <h1>Welcome to My Website</h1>
