--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- main body tag: Contains the content of the page, can be applied styles   -->
 <body>
     <header>
-        <h1>Welcome To My Website</h1>
+        <h1>Welcome to My Website</h1>
         <nav>
             <a href="#about">About</a>
             <a href="/Carlos-D-G/contact.html">Contact</a>
