--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <h1>Welcome to My Website</h1>
         <nav>
             <a href="#about">About</a>
-            <a href="/Carlos-D-G/about/contact.html">Contact</a>
+            <a href="#contact">Contact</a>
+            <a href="about.html">About page</a>
         </nav>
     </header>
     <main>
