--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <title>My Personal Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-    <!-- main body tag: Contains the content of the page, can be applied styles   -->
 <body>
     <header>
         <h1>Welcome to My Website</h1>
         <nav>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
-            <a href="about.html">About page</a>
+            <a href="about.html">About Page</a>
         </nav>
     </header>
     <main>
         <section id="about">
             <h2>About Me</h2>
+            <p>This is where you introduce yourself.</p>
             <p>This is where you introduce yourself</p>
         </section>
         <section id="contact">
@@ -26,9 +26,7 @@
             <p>Email: yourname@example.com</p>
         </section>
     </main>
-    <!-- the ' &copy; ' tag does <i don't know yet replace here> -->
     <footer>
         <p>&copy; 2025 Your Name</p>
     </footer>
 </body>
-</html>
