updated email info

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: yourname@example.com</p>
+            <p>Email: Cadiaz@mail.lipscomb.edu</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Carlos Diaz Garcia</p>
     </footer>
 </body>
